# celer-mem

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: 01_quickstart.cpp  02_multi_scope.cpp  03_batch_ops.cpp  04_custom_backend.cpp  05_agent_memory.cpp  06_join_bench.cpp  06_swarm_demo.cpp  07_collatz_swarm.cpp  07_swarm_demo.cpp  08_collatz_swarm.cpp  09_fluid_ripple.cpp  10_fluid_ripple.cpp  10_route_solver.cpp  12_route_solver.cpp
finalized/: RFC-001-CELER-MEM.md  RFC-002-STREAMING-S3.md  RFC-003-cross-store-joins-and-materialization.md  RFC-004-necto-actor-ipc.md  RFC-005-vicsek-swarm-agents.md
include/celer/: celer.hpp  materialization.hpp
include/celer/api/: db_ref.hpp  global.hpp  result_set.hpp  store.hpp  table_ref.hpp
include/celer/backend/: concept.hpp  dynamic.hpp  qpdf.hpp  rocksdb.hpp  s3.hpp  sqlite.hpp
include/celer/core/: arc_buf.hpp  async_stream.hpp  aws_credentials.hpp  composite.hpp  compression.hpp  dispatch.hpp  poll_result.hpp  resource_stack.hpp  result.hpp  scheduler.hpp  stream.hpp  symbol_table.hpp  task_pool.hpp  tree_builder.hpp  types.hpp
include/celer/materialization/: codec.hpp  join.hpp  materialize.hpp  planner.hpp  store_ref.hpp  stream.hpp
include/celer/necto/: actor.hpp  channel.hpp
include/celer/necto/swarm/: cluster.hpp  field.hpp  morph.hpp  pheromone.hpp  swarm.hpp  types.hpp
include/celer/schema/: binding.hpp
include/celer/serde/: codec.hpp  reflect.hpp
src/api/: global.cpp
src/backend/: dynamic.cpp  qpdf.cpp  rocksdb.cpp  s3.cpp  sqlite.cpp
src/core/: aws_credentials.cpp  dispatch.cpp  tree_builder.cpp
tests/: integration.cpp  main.cpp  test_async.cpp  test_core_coverage.cpp  test_materialization.cpp  test_necto.cpp  test_qpdf.cpp  test_sqlite.cpp  test_support.hpp
